DOM，音合成，レスポンス悪い 画像まだ

--- a/dance.css
+++ b/dance.css
@@ -7,7 +7,12 @@ input#speed {
     cursor: pointer;
 }
 
-
+#stage {
+    width: 780px;
+    height: 780px;
+    position: relative;
+    background: url('mandara.jpg')
+}
 
 
 
