--- a/dance.css
+++ b/dance.css
@@ -1,21 +1,16 @@
+body {
+    overflow: hidden;
+}
+
 input#speed {
     width: 600px;
 }
 
-#control canvas:hover {
-    background: gray;
-    cursor: pointer;
-}
-
 #stage {
-    width: 700px;
-    height: 700px;
+    width: 100%;
+    height: 100%;
     position: relative;
-    /* background: url('mandara.jpg') */
-}
-
-button {
-    font-size: 40px;
+    overflow: hidden;
 }
 
 img.note {
