--- a/dance.css
+++ b/dance.css
@@ -50,3 +50,14 @@ img#bg {
     width: 100%;
     height: 100%;
 }
+
+#fps {
+    display: inline;
+    font-size: 40px;
+    position: absolute;
+    right: 1em;
+    top: 0px;
+    z-index: 100000;
+    color: #0f0;
+    font-weight: bold;
+}
