--- a/dance.css
+++ b/dance.css
@@ -39,15 +39,28 @@ img#center {
     height: 350px;
     z-index: 12000;
 
-    /* -webkit-animation-duration: 2s; */
-    /* -webkit-animation-timing-function: linear; */
-    /* -webkit-animation-iteration-count: infinite; */
-    /* -webkit-animation-name: rotate; */
+    -webkit-animation-duration: 60s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: rotate;
 }
 
-img#bg {
-    width: 100%;
-    height: 100%;
+img#bg-top {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    -webkit-box-reflect: left;
+}
+
+img#bg-bottom {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    -webkit-box-reflect: left;
 }
 
 #fps {
