--- a/dance.css
+++ b/dance.css
@@ -34,7 +34,7 @@ img.part {
 	100% { -webkit-transform: rotate(360deg); }
 }
 
-img#center {
+#center-items {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -48,6 +48,27 @@ img#center {
     /* -webkit-animation-timing-function: linear; */
     /* -webkit-animation-iteration-count: infinite; */
     /* -webkit-animation-name: rotate; */
+}
+
+#center-items .center-element {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    font-size: 100px;
+}
+
+#center-items .center-background {
+}
+#center-items .center-background img {
+    width: 100%;
+    height: 100%;
+}
+
+#center-items .center-item {
+    display: none;
+    z-index: 12010;
 }
 
 img#bg-right {
