--- a/dance.css
+++ b/dance.css
@@ -38,10 +38,10 @@ img.part {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -175px;
-    margin-top: -175px;
-    width: 350px;
-    height: 350px;
+    margin-left: -200px;
+    margin-top: -200px;
+    width: 400px;
+    height: 400px;
     z-index: 12000;
 
     /* -webkit-animation-duration: 60s; */
@@ -59,9 +59,7 @@ img.part {
     font-size: 100px;
 }
 
-#center-items .center-background {
-}
-#center-items .center-background img {
+#center-items .center-background img, #center-items .center-main-item img {
     width: 100%;
     height: 100%;
 }
