天気アイコン出すとか

--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -1,7 +1,15 @@
+.clear {
+    clear: both;
+}
+
 #indicator {
     display: none;
 }
 
 .page {
     display: none;
+}
+
+.day {
+    float: left;
 }
