--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -39,6 +39,11 @@
     display: none;
 }
 
+/* report page, city selector */
+
+select#city-selector {
+    width: 180px;
+}
 
 /* report page, result */
 
