--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -1,3 +1,7 @@
+.float {
+    float: left;
+}
+
 .clear {
     clear: both;
 }
@@ -30,7 +34,27 @@ select#city-selector {
 
 /* weather result */
 
+#result {
+    margin-top: 20px;
+}
+
+#area {
+    font-size: 120%;
+}
+
+#date {
+    min-width: 80px;
+}
+
+
+
+
 /* weather result image */
+
+#images {
+    margin-top: 20px;
+}
+
 .day {
     float: left;
     width: 155px;
@@ -91,5 +115,15 @@ select#city-selector {
 
 /* guide */
 #guide {
-    margin-top: 20px;
+    margin-top: 40px;
+}
+
+/* apis */
+.api {
+    margin-top: 10px;
+}
+.tenki-logo {
+    text-decoration: none;
+    color: #333;
+    font-size: 80%;
 }
