--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -120,10 +120,15 @@ select#city-selector {
 
 /* apis */
 .api {
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-left: 85px;
 }
+.api img {
+    width: 125px;
+}
+
 .tenki-logo {
     text-decoration: none;
     color: #333;
-    font-size: 80%;
+    font-size: 60%;
 }
