--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -42,6 +42,10 @@ select#city-selector {
     width: 180px;
 }
 
+#reset-city {
+    margin-left: 4em;
+}
+
 /* weather result */
 
 #result {
@@ -50,7 +54,7 @@ select#city-selector {
 
 #area-container {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     height: 35px;
 }
 
@@ -78,27 +82,24 @@ select#city-selector {
     height: 35px;
 }
 
-#weather-container {
-    height: 80px;
-}
-
 #date {
     font-size: 120%;
 }
 
 #description {
-    font-size: 90%;
+    font-size: 80%;
+    color: #666;
     text-align: right;
 }
 
 /* weather result image */
 
 #images {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .heat {
-    font-size: 90%;
+    font-size: 80%;
     text-align: center;
 }
 
@@ -143,19 +144,14 @@ select#city-selector {
 /* weather result comment */
 
 #comment {
-    margin-top: 20px;
-    margin-left: 5px;
-    margin-left: 5px;
-    border-radius: 5px;
-    padding: 5px;
-    min-height: 80px;
+    margin: 20px;
     line-height: 1.5;
 }
 
 /* share button*/
 
 #share-tweet-container {
-    margin-top: 34px;
+    margin-top: 20px;
 }
 
 #share-tweet-container img {
@@ -175,12 +171,17 @@ select#city-selector {
 /* guide */
 
 #guide {
+    margin: 10px;
     font-size: 90%;
 }
 
 /* guide */
 #guide-api {
+    font-size: 90%;
+
     margin-top: 60px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 /* apis */
@@ -196,4 +197,13 @@ select#city-selector {
     text-decoration: none;
     color: #333;
     font-size: 60%;
+}
+
+/* copyright */
+
+#copyright {
+    margin-top: 60px;
+    font-size: 60%;
+    text-align: center;
+    color: #666;
 }
