--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -186,12 +186,14 @@ select#city-selector {
     width: 42px;
     height: 42px;
     margin-left: 5px;
+    border: 1px solid #b4b4b4;
 }
 
 .wear-icons img {
-    width: 31px;
-    height: 31px;
-    vertical-align: center;
+    width: 34px;
+    height: 34px;
+    margin: 1px;
+    border: 1px solid #b4b4b4;
 }
 
 /* weather result comment */
