--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -248,6 +248,7 @@ select#city-selector {
 .api-message {
     margin-top: 20px;
     font-size: 80%;
+    text-align: center;
 }
 .api {
     margin-top: 20px;
