facebook like 出してみる

--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -283,11 +283,19 @@ select#city-selector {
     text-decoration: none;
 }
 
+/* facebook */
+
+.fb-container {
+    margin-top: 40px;
+    margin-left: 5px;
+}
+
 /* copyright */
 
 #copyright {
-    margin-top: 60px;
+    margin-top: 20px;
     font-size: 60%;
     text-align: center;
     color: #666;
 }
+
