--- a/public/color/sort_color.css
+++ b/public/color/sort_color.css
@@ -21,6 +21,8 @@ body {
   margin:15px 0;
 }
 
+
+
 .cursor-preview {
     position: absolute;
     left: 0px;
@@ -35,6 +37,31 @@ body {
 }
 
 /* ---left--- */
+
+.service-description{
+    color: #333333;
+    font-size: 90%;
+    margin: 0 0 10px;
+}
+
+#l-contents input.url {
+    border: 1px solid #CCCCCC;
+    font-size: 80%;
+    height: 15px;
+    margin: 0;
+    padding: 7px;
+    width: 264px;
+}
+
+#l-contents input.load {
+    background: none repeat scroll 0 0 #EEEEEE;
+    border: 1px solid #CCCCCC;
+    cursor: pointer;
+    height: 31px;
+    margin-left: 5px;
+    padding: 5px;
+    width: 80px;
+}
 
 #guide-or-main {
     position: relative;
@@ -145,10 +172,10 @@ body {
 
 #sidebar {
     background: none repeat scroll 0 0 #ffffff;
-    border-left: 1px solid #EAEAEA;
-    border-right: 1px solid #EAEAEA;
+    border-left: 1px solid #CCCCCC;
+    border-right: 1px solid #CCCCCC;
     float: right;
-    height: 570px;
+    height:625px;
     width: 250px;
     position:relative;
 }
@@ -163,7 +190,7 @@ body {
 .description {
   font-size:80%;
   color:#777777;
-  margin: 30px 10px 15px;
+  margin: 50px 10px 15px;
 }
 
 
@@ -172,6 +199,7 @@ body {
     width: 30px;
     height: 30px;
     vertical-align:middle;
+    border: 1px solid #EEEEEE;
 }
 
 .picked-color-item input {
@@ -196,7 +224,7 @@ body {
     background-color: #f9f9f9;
     border: 3px solid #DCDCDC;
     color: #777777;
-    margin: 10px;
+    margin:10px 10px 30px;
     padding: 5px 0;
     text-align: center;
     position:absolute;
