--- a/public/iromiru/sort_color.css
+++ b/public/iromiru/sort_color.css
@@ -14,6 +14,20 @@ a {
   height:40px;
 }
 
+#header-inner {
+  width:960px;
+  margin:0 auto;
+  padding:0;
+  float:0;
+}
+
+#header .buttons {
+    vertical-align: middle;
+    margin-top: 10px;
+    margin-right: 10px;
+    float: right;
+}
+
 #container{
   width:960px;
   margin:0 auto;
