--- a/public/iromiru/sort_color.css
+++ b/public/iromiru/sort_color.css
@@ -40,7 +40,8 @@ a {
 }
 
 .logo {
-    height:40px;
+    height:30px;
+    margin-top:5px;
 }
 
 
@@ -295,8 +296,8 @@ a {
 }
 
 #ad img {
-    max-width: 180px;
-    max-height: 180px;
+    max-width: 140px;
+    max-height: 140px;
 }
 
 /* footer */
