--- a/public/hanabi/hanabi.css
+++ b/public/hanabi/hanabi.css
@@ -27,7 +27,13 @@ h1 {
   margin-top: 10px;
   height: 500px;
 }
+.twitter-container {
+  vertical-align: middle;
+}
+#uchiage-flash {
+  height: 600px;
+}
 #service-footer {
-  margin-top: 10px;
+  margin-top: 30px;
   text-align: center;
 }
