--- a/public/hanabi/hanabi.less
+++ b/public/hanabi/hanabi.less
@@ -34,7 +34,15 @@ h1 {
     height: 500px;
 }
 
+.twitter-container {
+    vertical-align: middle;
+}
+
+#uchiage-flash {
+    height: 600px;
+}
+
 #service-footer {
-    margin-top: 10px;
+    margin-top: 30px;
     text-align: center;
 }
