--- a/public/hanabi/hanabi.less
+++ b/public/hanabi/hanabi.less
@@ -30,6 +30,9 @@ h1 {
 }
 
 #catch {
+    margin-left: 80px;
+    margin-top: 70px;
+    margin-bottom: 50px;
     background-image: url("/hanabi/img/catch.png");
     background-repeat: no-repeat;
     width: 830px;
@@ -37,12 +40,17 @@ h1 {
 }
 
 #create-uchiage .body {
+    width: 500px;
     float: left;
     font-weight: bold;
     font-size: 20px;
-    height: 170px;
+    height: 150px;
     border: 0px;
     border-radius: 10px;
+    margin-left: 80px;
+    margin-right: 20px;
+    margin-bottom: 60px;
+    padding: 10px;
 }
 
 #create-uchiage .submit {
@@ -56,6 +64,10 @@ h1 {
     border: 0px;
     margin: 0px;
     padding: 0px;
+}
+
+#service-header {
+    margin-top: 24px;
 }
 
 #service-header .buttons {
@@ -81,11 +93,28 @@ h1 {
 }
 
 #footer-image {
+    margin-top: 20px;
     background-image: url("/hanabi/img/footer-image.png");
     background-repeat: no-repeat;
     height: 86px;
 }
 
+#footer-buttons {
+    margin-top: 40px;
+    height: 32px;
+}
+
+#footer-catch {
+    marign-top: 20px;
+    height: 40px;
+}
+
+#star-container {
+    margin-left: 10px;
+}
+
 #service-footer {
+    margin-bottom: 30px;
+    margin-top: 40px;
     text-align: center;
 }
