--- a/public/hanabi/hanabi.less
+++ b/public/hanabi/hanabi.less
@@ -85,8 +85,9 @@ h1 {
     height: 500px;
 }
 
-.twitter-container {
+.share-this, .twitter-container {
     vertical-align: middle;
+    display: inline-block;
 }
 
 #uchiage-flash {
@@ -102,7 +103,8 @@ h1 {
 
 #footer-buttons {
     margin-top: 40px;
-    height: 32px;
+    height: 50px;
+    margin-bottom: 30px;
 }
 
 #footer-catch {
