--- a/public/hanabi/hanabi.css
+++ b/public/hanabi/hanabi.css
@@ -72,8 +72,10 @@ h1 {
   margin-top: 10px;
   height: 500px;
 }
+.share-this,
 .twitter-container {
   vertical-align: middle;
+  display: inline-block;
 }
 #uchiage-flash {
   height: 700px;
@@ -86,7 +88,8 @@ h1 {
 }
 #footer-buttons {
   margin-top: 40px;
-  height: 32px;
+  height: 50px;
+  margin-bottom: 30px;
 }
 #footer-catch {
   marign-top: 20px;
