--- a/public/hanabi/hanabi.less
+++ b/public/hanabi/hanabi.less
@@ -94,6 +94,21 @@ h1 {
     height: 700px;
 }
 
+#uchiage-image {
+    display: none;
+    text-align: center;
+    vertical-align: middle;
+    width: 1000px;
+    height: 700px;
+    background-image: url("/hanabi/img/fallback-bg.png");
+    background-repeat: no-repeat;
+
+    .body {
+        font-weight: bold;
+        font-size: 80px;
+    }
+}
+
 #footer-image {
     margin-top: 20px;
     background-image: url("/hanabi/img/footer-image.png");
