--- a/public/hanabi/hanabi.css
+++ b/public/hanabi/hanabi.css
@@ -80,6 +80,20 @@ h1 {
 #uchiage-flash {
   height: 700px;
 }
+#uchiage-image {
+  display: none;
+  text-align: center;
+  vertical-align: middle;
+  width: 1000px;
+  height: 700px;
+  background-image: url("/hanabi/img/fallback-bg.png");
+  background-repeat: no-repeat;
+}
+#uchiage-image .body {
+  font-weight: bold;
+  font-size: 80px;
+  -webkit-box-shadow: 0px 0px 4px #000;
+}
 #footer-image {
   margin-top: 20px;
   background-image: url("/hanabi/img/footer-image.png");
