--- a/public/hanabi/hanabi.less
+++ b/public/hanabi/hanabi.less
@@ -54,6 +54,7 @@ h1 {
 }
 
 #create-uchiage .submit {
+    cursor: pointer;
     float: left;
     display: inline-block;
     vertical-align: middle;
@@ -135,4 +136,45 @@ h1 {
     margin-bottom: 30px;
     margin-top: 40px;
     text-align: center;
+
+    a {
+        text-decoration: none;
+        color: #ffffff;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+}
+
+#tamaya-container {
+    margin-top: 20px;
+}
+
+#button-container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    img {
+        margin-left: 15px;
+        margin-bottom: 15px;
+        float: left;
+        vertical-align: middle;
+    }
+
+    .button {
+        cursor: pointer;
+        float: left;
+        display: inline-block;
+        vertical-align: middle;
+        background-color: #000000;
+        background-image: url("/hanabi/img/stamp-add.png");
+        background-repeat: no-repeat;
+        width: 103px;
+        height: 65px;
+        border: 0px;
+        margin: 0px;
+        padding: 0px;
+        margin-top: 6px;
+        margin-bottom: 15px;
+  }
 }
