--- a/public/bon3/bon3.css
+++ b/public/bon3/bon3.css
@@ -1,6 +1,5 @@
 body {
   min-width: 800px;
-  min-height: 500px;
 }
 a,
 a:visited {
@@ -16,6 +15,10 @@ canvas {
   left: 0px;
   top: 0px;
   z-index: 100;
+  cursor: pointer;
+}
+.sorry {
+  font-size: 30px;
 }
 #footer {
   color: white;
@@ -33,14 +36,18 @@ canvas {
 }
 #footer #tshirts {
   position: absolute;
-  bottom: 0px;
-  right: 5px;
+  left: 10px;
+  bottom: 10px;
+}
+#footer #tshirts img {
+  height: 50px;
 }
 #footer #copy {
-  font-size: 80%;
+  font-weight: bold;
+  font-size: 12px;
   text-align: center;
   position: absolute;
   left: 0px;
-  bottom: 5px;
+  bottom: 10px;
   width: 100%;
 }
