--- a/public/bon3/bon3.less
+++ b/public/bon3/bon3.less
@@ -34,11 +34,6 @@ canvas {
     width: 100%;
     height: 50px;
 
-    h1 {
-        position: absolute;
-        bottom: 5px;
-        left: 5px;
-    }
     #tshirts {
         position: absolute;
         left: 10px;
@@ -48,6 +43,29 @@ canvas {
             height:50px;
         }
     }
+    #volume {
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        z-index: 100;
+
+        .sound-on {
+            display: none;
+        }
+        .sound-off {
+            display: block;
+        }
+
+        &.on {
+            .sound-on {
+                display: block;
+            }
+            .sound-off {
+                display: none;
+            }
+        }
+
+    }
     #copy {
         font-weight: bold;
         font-size: 14px;
@@ -56,6 +74,7 @@ canvas {
         left: 0px;
         bottom: 10px;
         width: 100%;
+        z-index: 10;
     }
 
 }
