--- a/public/bon3/bon3.css
+++ b/public/bon3/bon3.css
@@ -1,14 +1,15 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
 body {
   min-width: 800px;
+  font-family: sans-serif;
 }
 a,
 a:visited {
   text-decoration: none;
   color: #fff;
-}
-* {
-  margin: 0px;
-  padding: 0px;
 }
 canvas {
   position: absolute;
@@ -18,7 +19,9 @@ canvas {
   cursor: pointer;
 }
 .sorry {
+  text-align: center;
   font-size: 30px;
+  margin: 100px;
 }
 #footer {
   color: white;
@@ -27,7 +30,7 @@ canvas {
   left: 0px;
   z-index: 200;
   width: 100%;
-  height: 50px;
+  height: 70px;
 }
 #footer #tshirts {
   position: absolute;
