--- a/public/bon3/bon3.less
+++ b/public/bon3/bon3.less
@@ -1,15 +1,16 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     min-width: 800px;
+    font-family: sans-serif;
 }
 
 a, a:visited {
     text-decoration: none;
     color: #fff;
-}
-
-* {
-    margin: 0px;
-    padding: 0px;
 }
 
 canvas {
@@ -22,7 +23,9 @@ canvas {
 }
 
 .sorry {
+    text-align: center;
     font-size: 30px;
+    margin: 100px;
 }
 
 #footer {
@@ -32,7 +35,7 @@ canvas {
     left: 0px;
     z-index: 200;
     width: 100%;
-    height: 50px;
+    height: 70px;
 
     #tshirts {
         position: absolute;
