--- a/public/bon3/bon3.less
+++ b/public/bon3/bon3.less
@@ -53,6 +53,11 @@ canvas {
         bottom: 10px;
         z-index: 100;
 
+        img {
+            vertical-align: bottom;
+            height: 25px;
+        }
+
         .sound-on {
             display: none;
         }
