--- a/public/bon3/bon3.less
+++ b/public/bon3/bon3.less
@@ -22,10 +22,22 @@ canvas {
 
 }
 
-.sorry {
+.sorry-pc {
     text-align: center;
     font-size: 30px;
     margin: 100px;
+    display: none;
+}
+
+.sorry-touch {
+    text-align: center;
+    font-size: 30px;
+    margin: 100px;
+    display: none;
+
+    img {
+        width: 50%;
+    }
 }
 
 #footer {
