--- a/public/sukimap/css/common.less
+++ b/public/sukimap/css/common.less
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: sans-serif;
     margin:0;
@@ -5,6 +9,13 @@ body {
 }
 
 /* 共通 */
+body {
+    #map-preview {
+        width: 100%;
+        height: 300px;
+        background: #787878;
+    }
+}
 
 /* 各ページ */
 
