--- a/public/sukimap/css/common.css
+++ b/public/sukimap/css/common.css
@@ -1,9 +1,18 @@
+html,
+body {
+  height: 100%;
+}
 body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
 }
 /* 共通 */
+body #map-preview {
+  width: 100%;
+  height: 300px;
+  background: #787878;
+}
 /* 各ページ */
 body#edit-page #map-preview {
   width: 100%;
