--- a/public/sukimap/css/common.css
+++ b/public/sukimap/css/common.css
@@ -8,14 +8,34 @@ body {
   padding: 0;
 }
 /* 共通 */
+body #wrapper {
+  background: url('/sukimap/image/background.png');
+}
+body #title {
+  background: url('/sukimap/image/header_back.png');
+  text-align: center;
+}
+body #title img {
+  width: 148px;
+  height: 40px;
+}
+body #main-content {
+  padding: 5px;
+}
 body #map-preview {
   width: 100%;
   height: 300px;
   background: #787878;
 }
 /* 各ページ */
-body#edit-page #map-preview {
-  width: 100%;
-  height: 300px;
-  background: #787878;
+body#edit-page .faces img {
+  width: 65px;
+  height: 70px;
+  cursor: pointer;
+}
+body#edit-page .faces input {
+  display: none;
+}
+body#edit-page .faces input:checked + img {
+  background: pink;
 }
