--- a/public/sukimap/css/common.less
+++ b/public/sukimap/css/common.less
@@ -10,6 +10,23 @@ body {
 
 /* 共通 */
 body {
+    #wrapper {
+        background: url('/sukimap/image/background.png');
+    }
+
+    #title {
+        background: url('/sukimap/image/header_back.png');
+        text-align: center;
+        img {
+            width: 148px;
+            height: 40px;
+        }
+    }
+
+    #main-content {
+        padding: 5px;
+    }
+
     #map-preview {
         width: 100%;
         height: 300px;
@@ -20,9 +37,17 @@ body {
 /* 各ページ */
 
 body#edit-page {
-    #map-preview {
-        width: 100%;
-        height: 300px;
-        background: #787878;
+    .faces {
+        img {
+            width: 65px;
+            height: 70px;
+            cursor: pointer;
+        }
+        input {
+            display: none;
+        }
+        input:checked+img {
+            background: pink;
+        }
     }
 }
